<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:backgroundTint="#F0FFFFFF"
    android:backgroundTintMode="src_over"
    tools:context=".ui.activities.TranslateActivity">

    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/bottom_navigation_background"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/translateKapat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:contentDescription="@string/navigation_icon"
            android:src="@drawable/ic_close" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:text="@string/translate_result"
            android:textAlignment="center"
            android:textColor="@color/font_color_dark"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/translatePaylas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/navigation_icon"
            android:src="@drawable/ic_share" />
    </RelativeLayout>


    <TextView
        android:id="@+id/sonucMetin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="10dp"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/sonucTranslateContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBar" />

    <ScrollView
        android:id="@+id/sonucTextContainer"
        android:layout_width="match_parent"
        android:layout_height="207dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/sonucTranslateContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBar">

        <com.example.metinapp.views.TextArea
            android:id="@+id/sonucTextDuzenleyici"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:gravity="start"
            android:importantForAutofill="no"
            android:inputType="text|textMultiLine|textNoSuggestions"
            android:textAlignment="viewStart"
            android:textSize="14sp"
            tools:ignore="LabelFor" />
    </ScrollView>

    <TextView
        android:id="@+id/sonucTranslateMetin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sonucTextContainer" />

    <ScrollView
        android:id="@+id/sonucTranslateContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sonucTextContainer"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="-142dp">

        <com.example.metinapp.views.TextArea
            android:id="@+id/sonucTranslateDuzenleyici"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:gravity="start"
            android:importantForAutofill="no"
            android:inputType="text|textMultiLine|textNoSuggestions"
            android:textAlignment="viewStart"
            android:textSize="16sp"
            tools:ignore="LabelFor" />
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/sonucuDuzenle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#9303BA"
        android:contentDescription="@string/edit_extracted_text"
        android:src="@drawable/ic_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/background" />


</androidx.constraintlayout.widget.ConstraintLayout>